--- a/immersiondays/cluster_autoscaler1.yml.template
+++ b/immersiondays/cluster_autoscaler1.yml.template
@@ -48,7 +48,7 @@ rules:
   verbs: ["watch","list","get"]
 
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: cluster-autoscaler
@@ -66,7 +66,7 @@ rules:
   verbs: ["delete","get","update","watch"]
 
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: cluster-autoscaler
@@ -83,7 +83,7 @@ subjects:
     namespace: kube-system
 
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: cluster-autoscaler
@@ -137,8 +137,8 @@ spec:
             - --stderrthreshold=info
             - --cloud-provider=aws
             - --skip-nodes-with-local-storage=false
-            - --nodes=1:3:eksctl-eksworkshop-eksctl1-nodegroup-dev-2vcpu-8gb-spot-NodeGroup-1TQ14IUNHU2K1
-            - --nodes=1:3:eksctl-eksworkshop-eksctl1-nodegroup-dev-2vcpu-4gb-spot-NodeGroup-1WA6RD2YPG4C6
+            - --nodes=1:3:$ASG_SPOT_NAME_1
+            - --nodes=1:3:$ASG_SPOT_NAME_2
             - --expander=random
             - --expendable-pods-priority-cutoff=-10
             - --scale-down-unneeded-time=2m0s
